<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetWeaver Cloud Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="last_modified_">"Last Modified: "</string>
    <string name="size_">"Size: "</string>
    <string name="applications">Applications</string>
    <string name="appliance_id">Appliance ID</string>
    <string name="status">Status</string>
    <string name="domain">Domain</string>
    <string name="access_point">Access Point</string>
    <string name="logs">Logs</string>
    <string name="delete">Delete</string>

</resources>